Fixed footer clipping over content on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,8 @@ h2 {
     margin: auto;
     width: 50%;
     padding: 20px;
-    margin-top: 5%;  
+    margin-top: 5%; 
+    margin-bottom: 100px;
 }
 
 body {
@@ -105,9 +106,11 @@ footer {
     background-color: #666666;
     text-align: center;
     width: 100%;
-    height: 50px;
+    height: 40px;
     position: fixed;
     bottom: 0;
+    margin-top: 20px;
+    
  
 }
 
